transiciones de entrada a las secciones

--- a/src/styles/graph.styl
+++ b/src/styles/graph.styl
@@ -19,7 +19,6 @@
 .Graph__area
     fill alpha($colorParticle10, 0.06)
 
-// TODO: Fix this.
 .Graph__area.Graph__color0
     fill alpha($colorParticle10, 0.06)
 
@@ -69,3 +68,14 @@
 .Graph__temperature
     fill $colorMagnitude2
 
+.Graph__legendColor--particles1
+    background-color $colorParticles1
+.Graph__legendColor--particles2
+    background-color $colorParticles2
+.Graph__legendColor--particles2
+    background-color $colorParticles3
+
+.Graph__legendColor--solarWind1
+    background-color $colorSolarWind1
+.Graph__legendColor--solarWind2
+    background-color $colorSolarWind2
