--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,5 +1,6 @@
 @import 'base.styl'
 @import 'graph.styl'
+@import 'animations.styl'
 
 // ----------------------------------------------------------
 // Base styles
@@ -58,14 +59,14 @@ h3
     text-transform uppercase
     color $colorTitle
     font-weight 200
-
+    margin 1rem 0 .5rem
 h4
     text-transform uppercase
     color $colorHighlight
     font-weight 200
 
-p:first-line
-    margin-left 2rem
+p
+    margin .5rem 0
 
 ::-webkit-scrollbar
     width 1px
@@ -320,7 +321,6 @@ p:first-line
     margin auto
     position relative
     background-color black
-    // border 1px solid $colorDim
     border-radius 50%
 .Sun__date
     position absolute
@@ -339,6 +339,7 @@ p:first-line
     max-width 100%
     max-height 100%
     border-radius 50%
+    border 4px solid black
 .Sun__container:after
     content ''
     position absolute
@@ -347,7 +348,7 @@ p:first-line
     width 100%
     height 100%
     border-radius 50%
-    box-shadow inset 0 0 4rem 2rem black
+    box-shadow inset 0 0 4rem 2.5rem black
     z-index 10
 
 // ----------------------------------------------------------
@@ -775,3 +776,16 @@ $RadialDanger__fill
 .Forecast__statsLabel--blackout
 .Forecast__statsValue--blackout
     color $colorBlackout
+
+// ----------------------------------------------------------
+// Transitions
+
+section.isActive
+    .Panel__header
+        animation AnimHeaderIn .2s $easeInCubic
+    .Panel__content
+        animation AnimBodyIn .6s $easeInCubic
+    .Panel__footer
+        animation AnimFooterIn .4s $easeInCubic
+    .Panel__content--text
+        animation AnimTextIn .8s $easeInCubic
