Añadida fecha en el timeline de imágenes (sección weather)

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -55,14 +55,14 @@ block content
                         .Timeline
                             .Timeline__progress
                                 .Timeline__bar
-                                    .Timeline__fill(style="transform: scaleX(0.44);")
-                                .Timeline__mark(style="left: 44%;")
+                                    .Timeline__fill(style="transform: scaleX(0.0);")
+                                .Timeline__mark(style="left: 0%;")
                                     .Timeline__markTop
                                     .Timeline__markBottom
                             .Timeline__dates
-                                .Timeline__dateStart 2015-12-24 12:45
-                                .Timeline__dateCurrent 2015-12-24 12:45
-                                .Timeline__dateEnd 2015-12-25 14:45
+                                .Timeline__dateStart 0000-00-00 --:--
+                                .Timeline__dateCurrent 0000-00-00 --:--
+                                .Timeline__dateEnd 0000-00-00 --:--
                 .Weather__fluxes
                     .Panel__header
                         .Panel__title Fluxes
