Fixed graph legend colors and styles

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -595,6 +595,11 @@ $Graph__legendColor
 
 .Graph__legendColor--particle10
 .Graph__legendColor--particle100
+.Graph__legendColor--particles1
+.Graph__legendColor--particles2
+.Graph__legendColor--particles3
+.Graph__legendColor--solarWind1
+.Graph__legendColor--solarWind2
 .Graph__legendColor--monthly
 .Graph__legendColor--smoothedMonthly
 .Graph__legendColor--predictedMonthly
@@ -606,6 +611,17 @@ $Graph__legendColor
 .Graph__legendColor--particle100
     background-color $colorParticle100
 
+.Graph__legendColor--particles1
+    background-color $colorParticles1
+.Graph__legendColor--particles2
+    background-color $colorParticles2
+.Graph__legendColor--particles3
+    background-color $colorParticles3
+
+.Graph__legendColor--solarWind1
+    background-color $colorTitle
+.Graph__legendColor--solarWind2
+    background-color $colorMagnitude2
 
 
 .Graph__legendColor--monthly
