--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -96,9 +96,13 @@ $Text__body
 
 $Section
     flex 0 0 100%
-    display none
-$Section--active
     display flex
+    opacity 0
+    max-width 0
+    overflow hidden
+$Section--active
+    opacity 1
+    max-width initial
 
 // ----------------------------------------------------------
 // Panels
@@ -136,7 +140,6 @@ $Panel__header
     border-bottom 1px solid $colorDim
     background-color alpha($colorDim, 0.06)
     border-top 1px solid $colorDim
-    animation AnimPanelHeader .3s $easeInCubic
 $Panel__decor
     position absolute
     content ''
@@ -199,10 +202,10 @@ $NavActive
 $NavHover
     color $colorHighlight
     border-radius .125rem
-    animation AnimHover .1s ease-in-out
+    animation animHover .1s ease-in-out
     background-color $colorDim
 
-@keyframes AnimHover
+@keyframes animHover
     0%
         box-shadow inset 0 0 0 $colorHighlight
         background-color black
