--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -195,19 +195,19 @@ p
     .Icon--sound
         fill $colorHighlight
     .Sound--1
-        animation AnimSound 1s ease-in-out infinite
+        animation animSound 1s ease-in-out infinite
     .Sound--2
-        animation AnimSound .9s ease-in-out infinite
+        animation animSound .9s ease-in-out infinite
     .Sound--3
-        animation AnimSound .7s ease-in-out infinite
+        animation animSound .7s ease-in-out infinite
     .Sound--4
-        animation AnimSound .2s ease-in-out infinite
+        animation animSound .2s ease-in-out infinite
 
 .Button--sound.isOff .Icon--sound .Sound
     transform scaleY(0.1)
 
 
-@keyframes AnimSound
+@keyframes animSound
     0%
         transform scaleY(0.1)
         fill $colorBase
@@ -541,12 +541,6 @@ p
 .Forecast
     @extend $Section
 
-.Weather.isActive
-.Sunspots.isActive
-.SolarCycle.isActive
-.Forecast.isActive
-    @extend $Section--active
-
 .Sunspots__image
 .SolarCycle__graph
     @extend $Panel--60
@@ -648,24 +642,24 @@ $Graph__legendColor
     opacity 1
     .Loader01
 
-        animation AnimLoader 1s ease-in-out infinite alternate
+        animation animLoader 1s ease-in-out infinite alternate
     .Loader02
-        animation AnimLoader 1s ease-in-out infinite alternate .1s
+        animation animLoader 1s ease-in-out infinite alternate .1s
     .Loader03
-        animation AnimLoader 1s ease-in-out infinite alternate .2s
+        animation animLoader 1s ease-in-out infinite alternate .2s
     .Loader04
-        animation AnimLoader 1s ease-in-out infinite alternate .3s
+        animation animLoader 1s ease-in-out infinite alternate .3s
     .Loader05
-        animation AnimLoader 1s ease-in-out infinite alternate .4s
+        animation animLoader 1s ease-in-out infinite alternate .4s
     .Loader06
-        animation AnimLoader 1s ease-in-out infinite alternate .5s
+        animation animLoader 1s ease-in-out infinite alternate .5s
 
 .Loader:not(.isActive)
     opacity 0
     pointer-events none
 
 
-@keyframes AnimLoader
+@keyframes animLoader
     0%
         fill $colorBase
         transform scaleY(0.1)
@@ -784,16 +778,3 @@ $RadialDanger__fill
 .Forecast__statsLabel--blackout
 .Forecast__statsValue--blackout
     color $colorBlackout
-
-// ----------------------------------------------------------
-// Transitions
-
-section.isActive
-    .Panel__title
-        @extend $AnimTitle
-    .Panel__content
-        animation AnimBodyIn .6s $easeInCubic
-    .Panel__footer
-        animation AnimFooterIn .4s $easeInCubic
-    .Panel__content--text
-        animation AnimTextIn .8s $easeInCubic
