--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -137,6 +137,10 @@ $Panel__header
     height 3rem
     display flex
     align-items center
+    border-bottom 1px solid transparent
+    background-color transparent
+    border-top 1px solid transparent
+$Panel__header--active
     border-bottom 1px solid $colorDim
     background-color alpha($colorDim, 0.06)
     border-top 1px solid $colorDim
