--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -103,6 +103,7 @@ $Section
 $Section--active
     opacity 1
     max-width initial
+    transform translate3d(0, 0, 0)
 
 // ----------------------------------------------------------
 // Panels
