--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -11,7 +11,7 @@ mixin loader(id)
 extends base
 
 block content
-    canvas.Background
+    //canvas.Background
     .Page
         .Page__top
             .Logo
@@ -158,9 +158,9 @@ block content
                                 .Forecast__dayData
                                     svg.RadialDanger(width="100%", height="100%", viewBox="0 0 102 102")
                                         g
-                                            circle.RadialDanger__geomagnetic(cx="50", cy="50", r="12")
-                                            circle.RadialDanger__solar(cx="50", cy="50", r="18")
-                                            circle.RadialDanger__blackout(cx="50", cy="50", r="19")
+                                            circle.RadialDanger__geomagnetic(cx="50", cy="50")
+                                            circle.RadialDanger__solar(cx="50", cy="50")
+                                            circle.RadialDanger__blackout(cx="50", cy="50")
                                         g
                                             line.RadialDanger__divider(x1="50", y1="50", x2="50", y2="0")
                                             line.RadialDanger__divider(x1="50", y1="50", x2="100", y2="0")
@@ -189,9 +189,9 @@ block content
                                 .Forecast__dayData
                                     svg.RadialDanger(width="100%", height="100%", viewBox="0 0 102 102")
                                         g
-                                            circle.RadialDanger__geomagnetic(cx="50", cy="50", r="12")
-                                            circle.RadialDanger__solar(cx="50", cy="50", r="18")
-                                            circle.RadialDanger__blackout(cx="50", cy="50", r="19")
+                                            circle.RadialDanger__geomagnetic(cx="50", cy="50")
+                                            circle.RadialDanger__solar(cx="50", cy="50")
+                                            circle.RadialDanger__blackout(cx="50", cy="50")
                                         g
                                             line.RadialDanger__divider(x1="50", y1="50", x2="50", y2="0")
                                             line.RadialDanger__divider(x1="50", y1="50", x2="100", y2="0")
@@ -220,9 +220,9 @@ block content
                                 .Forecast__dayData
                                     svg.RadialDanger(width="100%", height="100%", viewBox="0 0 102 102")
                                         g
-                                            circle.RadialDanger__geomagnetic(cx="50", cy="50", r="12")
-                                            circle.RadialDanger__solar(cx="50", cy="50", r="18")
-                                            circle.RadialDanger__blackout(cx="50", cy="50", r="19")
+                                            circle.RadialDanger__geomagnetic(cx="50", cy="50")
+                                            circle.RadialDanger__solar(cx="50", cy="50")
+                                            circle.RadialDanger__blackout(cx="50", cy="50")
                                         g
                                             line.RadialDanger__divider(x1="50", y1="50", x2="50", y2="0")
                                             line.RadialDanger__divider(x1="50", y1="50", x2="100", y2="0")
