--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -165,7 +165,6 @@ $Panel__title
     flex 1 0 auto
     text-transform uppercase
     color $colorTitle
-    //font-weight 500
     font-size 1rem
     padding 0.5rem 0
 
@@ -181,6 +180,7 @@ $Panel__content
     display flex
     flex-direction column
     padding 1rem 0
+    background-color rgba(0, 0, 0, .1)
 
 $Panel__content--noPadding
     @extend $Panel__content
