--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -85,11 +85,12 @@ p
 // Page background
 
 .Background
-    position absolute
+    position fixed
+    width 100%
+    height 100%
     top 0
-    right 0
-    bottom 0
     left 0
+    background linear-gradient(to right, hsl(0, 0%, 0%) 50%, hsl(24, 80%, 10%) 100%)
 
 .Bokeh
     position fixed
@@ -97,16 +98,16 @@ p
     height 100%
     top 0
     left 0
-    opacity .10
+    opacity .2
 
 .Bokeh__particle--red
     fill hsla(8, 60%, 60%, .75)
 
 .Bokeh__particle--magenta
-    fill hsla(64, 40%, 60%, .5)
+    fill hsla(84, 40%, 60%, .25)
 
 .Bokeh__particle--yellow
-    fill hsla(24, 60%, 60%, .7)
+    fill hsla(64, 60%, 60%, .7)
 
 // ----------------------------------------------------------
 // Page layout
