--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -15,20 +15,20 @@ mixin loader(id)
 extends base
 
 block content
-    svg.Bokeh(width="100%", height="100%", viewBox="0 0 100% 100%")
-        defs
-            filter(id="blur", x="-50%", y="-50%", width="200%", height="200%")
-                feGaussianBlur(stdDeviation="100")
-            filter(id="blur--2", x="-50%", y="-50%", width="200%", height="200%")
-                feGaussianBlur(stdDeviation="50")
-        circle.Bokeh__particle--red(cx="-4%", cy="0%", r="22%", filter="url(#blur)")
-        circle.Bokeh__particle--red(cx="100%", cy="20%", r="36%", filter="url(#blur)")
-        circle.Bokeh__particle--magenta(cx="88%", cy="60%", r="10%", filter="url(#blur--2)")
-        circle.Bokeh__particle--yellow(cx="75%", cy="110%", r="20%", filter="url(#blur)")
-        circle.Bokeh__particle--yellow(cx="70%", cy="40%", r="5%", filter="url(#blur)")
-        circle.Bokeh__particle--magenta(cx="110%", cy="100%", r="30%", filter="url(#blur)")
-        circle.Bokeh__particle--yellow(cx="64%", cy="55%", r="6%", filter="url(#blur--2)")
-        circle.Bokeh__particle--magenta(cx="20%", cy="-3%", r="12%", filter="url(#blur--2)")
+    .Background
+        svg.Bokeh(width="100%", height="100%", viewBox="0 0 100% 100%")
+            defs
+                filter(id="blur", x="-50%", y="-50%", width="200%", height="200%")
+                    feGaussianBlur(stdDeviation="100")
+                filter(id="blur--2", x="-50%", y="-50%", width="200%", height="200%")
+                    feGaussianBlur(stdDeviation="50")
+            circle.Bokeh__particle--red(cx="-4%", cy="0%", r="22%", filter="url(#blur)")
+            circle.Bokeh__particle--magenta(cx="88%", cy="60%", r="10%", filter="url(#blur--2)")
+            circle.Bokeh__particle--yellow(cx="75%", cy="110%", r="20%", filter="url(#blur)")
+            circle.Bokeh__particle--yellow(cx="70%", cy="40%", r="5%", filter="url(#blur)")
+            circle.Bokeh__particle--magenta(cx="110%", cy="100%", r="30%", filter="url(#blur)")
+            circle.Bokeh__particle--yellow(cx="64%", cy="55%", r="6%", filter="url(#blur--2)")
+            circle.Bokeh__particle--magenta(cx="20%", cy="-3%", r="12%", filter="url(#blur--2)")
     .Page
         .Page__top
             .Logo
