--- a/src/styles/animations.styl
+++ b/src/styles/animations.styl
@@ -18,13 +18,13 @@ section.isActive
     .SolarCycle__graph
     .Forecast__graphs
         transform-style preserve-3d
-        animation anim3DPanelLeft .4s ease-in
+        animation anim3DPanelLeft .2s ease-in
     .Weather__fluxes
     .Sunspots__description
     .SolarCycle__description
     .Forecast__alerts
         transform-style preserve-3d
-        animation anim3DPanelRight .8s ease-in
+        animation anim3DPanelRight .4s ease-in
 // ----------------------------------------------------------
 // Animations
 
@@ -75,8 +75,8 @@ section.isActive
 @keyframes anim3DPanelLeft
     0%
         transform matrix3D(
-                        1.5, 0, 0, -.0002,
-                        0, 1.5, 0, 0,
+                        .8, 0, 0, -.0004,
+                        0, .8, 0, 0,
                         0, 0, 1, 0,
                         -120, 0, 0, 1
                         )
@@ -92,16 +92,16 @@ section.isActive
     0%
         opacity 0
         transform matrix3D(
-                        1.5, 0, 0, .0002,
-                        0, 1.5, 0, 0,
+                        .8, 0, 0, .0004,
+                        0, .8, 0, 0,
                         0, 0, 1, 0,
                         120, 0, 0, 1
                         )
     50%
         opacity 0
         transform matrix3D(
-                        1.5, 0, 0, .0002,
-                        0, 1.5, 0, 0,
+                        .8, 0, 0, .0004,
+                        0, .8, 0, 0,
                         0, 0, 1, 0,
                         120, 0, 0, 1
                         )
