--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -7,12 +7,12 @@
 
 @font-face
     font-family 'FiraSans'
-    src url('fonts/FiraSans-Light.woff2') format('woff2')
+    src url('fonts/FiraSans-Light.woff') format('woff')
     font-weight 200
 
 @font-face
     font-family 'FiraSans'
-    src url('fonts/FiraSans-Medium.woff2') format('woff2')
+    src url('fonts/FiraSans-Medium.woff') format('woff')
     font-weight 500
 
 *
