Starting a complete rewrite

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -6,5 +6,5 @@ html
     link(href="index.css",type="text/css",rel="stylesheet")
     link(type="image/png", rel="icon", href="images/favicon.png")
   body
-    block content
+    #Application
     script(src="index.js")
