--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -86,6 +86,10 @@ p
 // ----------------------------------------------------------
 // Page background
 
+#Application, .Icarus
+    width 100%
+    height 100%
+
 .Background
     position fixed
     width 100%
@@ -350,6 +354,7 @@ p
     position relative
     background-color black
     border-radius 50%
+
 .Sun__date
     position absolute
     right 0
