--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -159,25 +159,15 @@ block content
                     .Panel__content
                         .Forecast__days
                             .Forecast__day
-                                .Forecast__dayLabel Dec 26
+                                .Forecast__dayLabel Sep 28
                                 .Forecast__dayData
-                                    svg.RadialDanger(width="100%", height="100%", viewBox="0 0 102 102")
-                                        g
-                                            circle.RadialDanger__geomagnetic(cx="50", cy="50")
-                                            circle.RadialDanger__solar(cx="50", cy="50")
-                                            circle.RadialDanger__blackout(cx="50", cy="50")
-                                        g
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="50", y2="0")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="100", y2="0")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="100", y2="50")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="100", y2="100")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="50", y2="100")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="0", y2="100")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="0", y2="50")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="0", y2="0")
-                                        g
-                                            circle.RadialDanger__base--initial(cx="50", cy="50", r="10")
-                                            circle.RadialDanger__base(cx="50", cy="50", r="50")
+                                    .GraphDanger
+                                        .GraphDanger__geomagnetic
+                                            .GraphDanger__geomagneticFill
+                                        .GraphDanger__solar
+                                            .GraphDanger__solarFill
+                                        .GraphDanger__blackout
+                                            .GraphDanger__blackoutFill
                                     .Forecast__stats
                                         .Forecast__statsLabel--geomagnetic Geomagnetic Activity
                                         .Forecast__statsValue--geomagnetic 8 / 2
@@ -190,25 +180,15 @@ block content
                                         .Forecast__statsLabel--blackout Radio Blackout Activity
                                         .Forecast__statsValue--blackout 10%
                             .Forecast__day
-                                .Forecast__dayLabel Dec 27
+                                .Forecast__dayLabel Sep 29
                                 .Forecast__dayData
-                                    svg.RadialDanger(width="100%", height="100%", viewBox="0 0 102 102")
-                                        g
-                                            circle.RadialDanger__geomagnetic(cx="50", cy="50")
-                                            circle.RadialDanger__solar(cx="50", cy="50")
-                                            circle.RadialDanger__blackout(cx="50", cy="50")
-                                        g
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="50", y2="0")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="100", y2="0")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="100", y2="50")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="100", y2="100")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="50", y2="100")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="0", y2="100")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="0", y2="50")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="0", y2="0")
-                                        g
-                                            circle.RadialDanger__base--initial(cx="50", cy="50", r="10")
-                                            circle.RadialDanger__base(cx="50", cy="50", r="50")
+                                    .GraphDanger
+                                        .GraphDanger__geomagnetic
+                                            .GraphDanger__geomagneticFill
+                                        .GraphDanger__solar
+                                            .GraphDanger__solarFill
+                                        .GraphDanger__blackout
+                                            .GraphDanger__blackoutFill
                                     .Forecast__stats
                                         .Forecast__statsLabel--geomagnetic Geomagnetic Activity
                                         .Forecast__statsValue--geomagnetic 2 / 2
@@ -221,25 +201,15 @@ block content
                                         .Forecast__statsLabel--blackout Radio Blackout Activity
                                         .Forecast__statsValue--blackout 10%
                             .Forecast__day
-                                .Forecast__dayLabel Dec 28
+                                .Forecast__dayLabel Sep 30
                                 .Forecast__dayData
-                                    svg.RadialDanger(width="100%", height="100%", viewBox="0 0 102 102")
-                                        g
-                                            circle.RadialDanger__geomagnetic(cx="50", cy="50")
-                                            circle.RadialDanger__solar(cx="50", cy="50")
-                                            circle.RadialDanger__blackout(cx="50", cy="50")
-                                        g
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="50", y2="0")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="100", y2="0")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="100", y2="50")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="100", y2="100")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="50", y2="100")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="0", y2="100")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="0", y2="50")
-                                            line.RadialDanger__divider(x1="50", y1="50", x2="0", y2="0")
-                                        g
-                                            circle.RadialDanger__base--initial(cx="50", cy="50", r="10")
-                                            circle.RadialDanger__base(cx="50", cy="50", r="50")
+                                    .GraphDanger
+                                        .GraphDanger__geomagnetic
+                                            .GraphDanger__geomagneticFill
+                                        .GraphDanger__solar
+                                            .GraphDanger__solarFill
+                                        .GraphDanger__blackout
+                                            .GraphDanger__blackoutFill
                                     .Forecast__stats
                                         .Forecast__statsLabel--geomagnetic Geomagnetic Activity
                                         .Forecast__statsValue--geomagnetic 4 / 2
