--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -334,6 +334,12 @@ p
 .Panel__content--noPadding
     @extend $Panel__content--noPadding
 
+.EIT
+    flex 1 0
+    display flex
+    position relative
+    flex-direction column
+
 // ----------------------------------------------------------
 // Sun visualization
 
