--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -1,10 +1,30 @@
 doctype html
-html
+html(prefix="og: http://ogp.me/ns#")
   head
     meta(charset="utf-8")
+    meta(href="http://icarus.live",rel="canonical")
+    meta(name="keywords",content="sun,solar,wind,particles,sunspots,space,weather")
+    meta(name="description",content="")
+    meta(name="author",content="Aitor Moreno")
+    meta(name="author",content="Omar Moreno")
+    meta(name="author",content="Pablo Ruiz")
+    meta(name="twitter:card",content="summary_large_image")
+    meta(name="twitter:title",content="Icarus")
+    meta(name="twitter:description",content="")
+    meta(name="twitter:image",content="")
+    meta(name="twitter:site",content="@icarusalerts")
+    meta(name="twitter:creator",content="@kaleidosnet")
+    meta(name="twitter:creator",content="@rojo_2")
+    meta(property="og:title",content="Icarus")
+    meta(property="og:description",content="")
+    meta(property="og:type",content="website")
+    meta(property="og:url",content="http://icarus.live")
+    meta(property="og:image",content="")
+    meta(property="og:locale",content="en")
     title Icarus
     link(href="index.css",type="text/css",rel="stylesheet")
-    link(type="image/png", rel="icon", href="images/favicon.png")
+    link(type="text/plain",rel="author",href="http://icarus.live/humans.txt")
+    link(type="image/png",rel="icon",href="images/favicon.png")
   body
     #Application
     script(src="index.js")
