api location and .com to .net in kaleidos url

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -287,7 +287,7 @@ block content
                         p <a href="https://twitter.com/azazeln28" target="_blank">Aitor Moreno-Melcón</a>, <a href="https://twitter.com/mekanoide" target="_blank">Omar Moreno-Melcón</a> and <a href="https://twitter.com/diacritica" target="_blank">Pablo Ruiz-Múzquiz</a> are its creators, with <a href="https://twitter.com/ghilbrae" target="_blank">Angela Rivera-Campos</a> acting as our scientific advisor.
                         p If you would like to know more about Icarus Project or its public API, please contact us at <a href="mailto:info@icarus.live" target="_blank">info@icarus.live</a>
                         p Also, please find all the source code available at github: backend and frontend.
-                        p We would like to thank <a href="http://kaleidos.com" target="_blank">Kaleidos</a> and their <a href="http://piweek.com" target="_blank">PIWEEK</a> that greatly contributed to make this a reality.
+                        p We would like to thank <a href="http://kaleidos.net" target="_blank">Kaleidos</a> and their <a href="http://piweek.com" target="_blank">PIWEEK</a> that greatly contributed to make this a reality.
             .Controls
                 a.Button--sound.isOn(href="")
                     .Button__label Audio On
