--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -97,6 +97,7 @@ p
     top 0
     left 0
     background linear-gradient(to right, hsl(0, 0%, 0%) 60%, hsl(24, 80%, 10%) 100%)
+    background-image url('images/background.png')
 
 .Bokeh
     position fixed
@@ -671,7 +672,6 @@ $Graph__legendColor
     left 0
     width 100%
     height 100%
-    background-color black
     display flex
     align-items center
     justify-content center
