Add prettier and refactor code

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -26,4 +26,4 @@ html(prefix="og: http://ogp.me/ns#")
     link(type="image/png",rel="icon",href="images/favicon.png")
   body
     #Application
-    script(src="index.js")
+    script(src="/index.js")
